fix: Solved dark mode library side color

--- a/upsonic_on_prem/dash/static/css/dark_mode.css
+++ b/upsonic_on_prem/dash/static/css/dark_mode.css
@@ -52,3 +52,6 @@
   --background: 0 0% 0%!important;
 }
 
+[data-bs-theme=dark] .library_sidebar {
+  background-color: #000;;
+}
